# Conversor

./: README.md  iT Converto.spec  pyproject.toml
src/: convert.py  main.py  suported_ext.json
src/others/error/: error.py
